WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279308
CSS grid should not eagerly evaluate calc() for repetitions value
https://bugs.webkit.org/show_bug.cgi?id=279308
Summary
CSS grid should not eagerly evaluate calc() for repetitions value
Sam Weinig
Reported
2024-09-07 18:47:25 PDT
CSS grid should not eagerly evaluate calc() for repetitions value.
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2024-09-07 18:51:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33284
EWS
Comment 2
2024-09-09 10:46:35 PDT
Committed
283350@main
(71e24b22e1d3): <
https://commits.webkit.org/283350@main
> Reviewed commits have been landed. Closing PR #33284 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-09 10:47:15 PDT
<
rdar://problem/135558382
>
EWS
Comment 4
2024-09-19 13:11:15 PDT
Committed
283286.98@safari-7620-branch
(ad9d647d4cbc): <
https://commits.webkit.org/283286.98@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1850 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug